--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:10-alpine
 
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
+RUN mkdir -p /home/api_gateway/app/node_modules && chown -R node:node /home/api_gateway/app
 
-WORKDIR /home/node/app
+WORKDIR /home/api_gateway/app
 
 COPY package*.json ./
 
