--- a/users-service/Dockerfile
+++ b/users-service/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:10-alpine
 
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
+RUN mkdir -p /home/users_service/app/node_modules && chown -R node:node /home/users_service/app
 
-WORKDIR /home/node/app
+WORKDIR /home/users_service/app
 
 COPY package*.json ./
 
