--- a/monitoring-service/Dockerfile
+++ b/monitoring-service/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:10-alpine
 
-RUN mkdir -p /home/monitoring_service/app/node_modules && chown -R node:node /home/monitoring_service/app
+RUN mkdir -p /monitoring_service/app/node_modules && chown -R node:node /monitoring_service/app
 
-WORKDIR /home/monitoring_service/app
+WORKDIR /monitoring_service/app
 
 COPY package*.json ./
 
