Change folder for app

--- a/streaming-service/Dockerfile
+++ b/streaming-service/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:10-alpine
 
-RUN mkdir -p /home/streaming_service/app/node_modules && chown -R node:node /home/streaming_service/app
+RUN mkdir -p /streaming_service/app/node_modules && chown -R node:node /streaming_service/app
 
-WORKDIR /home/streaming_service/app
+WORKDIR /streaming_service/app
 
 COPY package*.json ./
 
