Change folder for app

--- a/users-service/Dockerfile
+++ b/users-service/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:10-alpine
 
-RUN mkdir -p /home/users_service/app/node_modules && chown -R node:node /home/users_service/app
+RUN mkdir -p /users_service/app/node_modules && chown -R node:node /users_service/app
 
-WORKDIR /home/users_service/app
+WORKDIR /users_service/app
 
 COPY package*.json ./
 
