--- a/monitoring-service/package.json
+++ b/monitoring-service/package.json
@@ -29,14 +29,15 @@
   "devDependencies": {
     "eslint": "^3.13.1",
     "mocha": "^3.2.0",
+    "nodemon": "^1.19.4",
     "should": "^11.1.2",
     "snazzy": "^6.0.0",
     "standard": "^8.6.0",
-    "supertest": "^2.0.1",
-    "nodemon": "^1.18.10"
+    "supertest": "^2.0.1"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.14.0",
     "helmet": "^3.4.0",
