--- a/geolocalization-service/package.json
+++ b/geolocalization-service/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^15.1.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.14.0",
     "helmet": "^3.4.0",
